fix word wrap

--- a/src/style/workdetail.module.css
+++ b/src/style/workdetail.module.css
@@ -41,3 +41,8 @@
 .listWrapper {
     margin-top: 20px;
 }
+
+.linkWrapper {
+    width: 100%;
+    word-wrap: break-word;
+}
